syntax = "proto3";
package apiserver.api.v1;
option go_package = "github.com/solo-io/solo-kit/pkg/api/v1/apiserver";

import "google/protobuf/any.proto";

/*
GRPC stuff
*/
message ReadRequest {
    string name = 1;
    string namespace = 2;
    string type_url = 3;
}

message ReadResponse {
    google.protobuf.Any resource = 1;
}

message WriteRequest {
    google.protobuf.Any resource = 1;
    bool overwrite_existing = 2;
}

message WriteResponse {
    google.protobuf.Any resource = 1;
}

message DeleteRequest {
    string name = 1;
    string namespace = 2;
    string type_url = 3;
    bool ignore_not_exist = 4;
}

message DeleteResponse {
}

message ListRequest {
    string namespace = 1;
    string type_url = 2;
}

message ListResponse {
    repeated google.protobuf.Any resource_list = 1;
}

message WatchRequest {
    string namespace = 1;
    string type_url = 2;
}

message WatchResponse {
    repeated google.protobuf.Any resource_list = 1;
}

message RegisterRequest {
}
message RegisterResponse {
}

service ApiServer {
    rpc Register (RegisterRequest) returns (RegisterResponse) {
    }
    rpc Read (ReadRequest) returns (ReadResponse) {
    }
    rpc Write (WriteRequest) returns (WriteResponse) {
    }
    rpc Delete (DeleteRequest) returns (DeleteResponse) {
    }
    rpc List (ListRequest) returns (ListResponse) {
    }
    rpc Watch (WatchRequest) returns (stream ListResponse) {
    }
}
